# xforce-terminal

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  architecture.html  build.bat  start-debug-viewer-py.bat  start-debug-viewer.bat  start-web.bat  start-with-debug.bat  start.bat  temp_terminal.bat  xterminal-config.json
backend/: .env.example  Cargo.toml
backend/src/: config.rs  error.rs  lib.rs  main.rs  oracle_cache.rs  types.rs  utils.rs
backend/src/auth/: mod.rs
backend/src/database/: mod.rs  models.rs  repository.rs
backend/src/handlers/: auth.rs  market.rs  mod.rs  soroban.rs
backend/src/services/: mod.rs  stellar.rs
backend/src/soroban/: client.rs  manager.rs
backend/src/stellar/: horizon.rs  mod.rs  types.rs
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: lib.rs
crates/libs/lib-auth/src/pwd/: mod.rs
crates/libs/lib-auth/src/token/: mod.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  error.rs  lib.rs
crates/libs/lib-core/src/dto/: auth.rs  market.rs  mod.rs
crates/libs/lib-core/src/model/: mod.rs
crates/libs/lib-core/src/model/store/: mod.rs  models.rs  swap_repository.rs  user_repository.rs  users.rs
crates/libs/lib-solana/: Cargo.toml
crates/libs/lib-solana/src/: cache.rs  candle_aggregator.rs  client.rs  lib.rs  mod_rs.rs  price_stream.rs  pyth.rs  spl_token.rs  types.rs
crates/libs/lib-solana/src/contracts/: idl_handler.rs  loader.rs  mod.rs  plugin.rs  registry.rs  transaction_builder.rs
crates/libs/lib-solana/src/contracts/batch_swap/: builder.rs  mod.rs  routes.rs  types.rs  validator.rs
crates/libs/lib-solana/src/jupiter/: client.rs  mod.rs  price.rs  quote.rs  swap.rs  types.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-web/: Cargo.toml
crates/libs/lib-web/src/: lib.rs  server.rs
crates/libs/lib-web/src/chat/: ai_bot.rs  db.rs  mod.rs  state.rs
crates/libs/lib-web/src/chat/handlers/: mod.rs  put.rs  subscription.rs  typing.rs  utils.rs
crates/libs/lib-web/src/handlers/: contracts.rs  friends.rs  market.rs  mod.rs  staking.rs  swap.rs  transaction.rs  wallet.rs  websocket.rs
crates/libs/lib-web/src/handlers/auth/: mod.rs  tests.rs
crates/libs/lib-web/src/handlers/auth/tests/: integration.rs  login.rs  mod.rs  signup.rs
crates/libs/lib-web/src/handlers/wallet_auth/: mod.rs  tests.rs
crates/libs/lib-web/src/middleware/: mod.rs  mw_auth.rs  mw_logging.rs  mw_req_stamp.rs  mw_res_map.rs
crates/libs/lib-web/src/routes/: mod.rs
crates/libs/lib-web/src/services/: market.rs  mod.rs  staking.rs  swap.rs  transaction.rs  wallet.rs
crates/utils/clear-users/: Cargo.toml
crates/utils/clear-users/src/: main.rs
data/: .gitkeep
idl/: batch_swap_router.json
migrations/: 20250106_create_users.sql  20250107_add_wallet_to_users.sql  20250113_create_messaging_tables.sql  20250124_create_swaps_table.sql
ref/: README.md
ref/horizon-api-docs/: admin-guide.html  api-reference.html  es.html  index.html
ref/horizon-api-docs/admin-guide/: configuring.html  ingestion-filtering.html  ingestion.html  installing.html  monitoring.html  overview.html  prerequisites.html  running.html  scaling.html  upgrading.html
ref/horizon-api-docs/api-reference/: aggregations.html  cb-retrieve-related-operations.html  cb-retrieve-related-transactions.html  errors.html  get-all-offers.html  get-all-trades.html  get-data-by-account-id.html  get-effects-by-account-id.html  get-offer-by-offer-id.html  get-offers-by-account-id.html  get-operations-by-account-id.html  get-payments-by-account-id.html  get-trades-by-account-id.html  get-trades-by-offer-id.html  get-transactions-by-account-id.html  list-all-accounts.html  list-all-assets.html  list-all-claimable-balances.html  list-all-effects.html  list-all-ledgers.html  (+31 more)
ref/soroban/: circuit_breaker.rs  client.rs  events.rs  state.rs
shared/: Cargo.toml
shared/src/: lib.rs  utils.rs
terminal/: Cargo.toml  src && mv CUsersisichgtk_4_terminalsrcchart.rs CUsersisichgtk_4_terminalfrontendsrc
terminal/src/: lib.rs  main.rs
terminal/src/app/: app_trait.rs  event_handler.rs  events.rs  mod.rs  state.rs  viewport.rs  window_app.rs  window_manager.rs
terminal/src/app/handlers/: auth.rs  mod.rs  navigation.rs  settings.rs  swap.rs  wallet.rs
terminal/src/app/tasks/: market.rs  mod.rs  swap.rs
terminal/src/core/: error.rs  mod.rs  service.rs
terminal/src/debug/: config.rs  error_aggregator.rs  event_tracker.rs  lock_tracer.rs  logger.rs  metrics.rs  mod.rs  task_tracker.rs  trace_context.rs  watchdog.rs
terminal/src/services/: api.rs  braid_client.rs  mod.rs  wallet.rs
terminal/src/services/api/: auth.rs  client.rs  friends.rs  market.rs  mod.rs  swap.rs  wallet.rs  websocket.rs
terminal/src/stacks/: auth.rs  login.rs  mod.rs  terminal.rs
terminal/src/ui/: chart.rs  cube.rs  debug_overlay.rs  effects.rs  fonts.rs  mod.rs  styles.rs  theme.rs
terminal/src/ui/screens/: ai_chat.rs  auth.rs  jupiter_feed.rs  landing.rs  live_assets.rs  live_chart.rs  live_table.rs  messaging.rs  mod.rs  pyth_feed.rs  settings.rs  swap_history.rs  terminal.rs  token_explorer.rs  tokens.rs  transactions.rs  wallet.rs
terminal/src/ui/widgets/: asset_card.rs  branding.rs  forms.rs  header.rs  icons.rs  layouts.rs  live_indicator.rs  mod.rs  nav_bar.rs  notifications.rs  price_display.rs  price_panel.rs  slippage_selector.rs  status_bar.rs  tables.rs  token_picker.rs  window_controls.rs
terminal/src/utils/: mod.rs  runtime.rs  validation.rs
wallet-web/: Cargo.toml  Trunk.toml  index.html  open-wallet.bat  open-wallet.ps1  serve.py  start-watch.bat
wallet-web/assets/wallets/: README.md
wallet-web/public/: simple-connect.html
wallet-web/src/: app.rs  main-simple.rs  main.rs
wallet-web/src/components/: mod.rs  navbar.rs  starfield.rs
wallet-web/src/pages/: about.rs  connect.rs  mod.rs  status.rs  transaction_sign.rs  wallet_setup.rs
wallet-web/src/services/: mod.rs  wallet.rs
wallet-web/src/state/: mod.rs  wallet.rs
wallet-web/src/utils/: constants.rs  format.rs  mod.rs  url.rs
wallet-web/style/: app.css
(+243 files in other folders)
