[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["XForce Team"]
license = "Apache-2.0"
repository = "https://github.com/xforce/xforce-terminal"
description = "Non-custodial Solana DeFi trading terminal with Bloomberg-style interface"

[workspace]
members = [
    "crates/libs/lib-core",
    "crates/libs/lib-auth",
    "crates/libs/lib-web",
    "crates/libs/lib-solana",
    "crates/libs/lib-utils",
    "crates/utils/clear-users",
    "backend",
    "terminal",
    "wallet-web",
]
resolver = "2"

[workspace.dependencies]
shared = { path = "shared" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.48", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "stream"], default-features = false }

# Solana dependencies removed from workspace - each package that needs them
# should specify them directly to avoid conflicts with wallet-web (which doesn't need Solana)
# bs58 is kept since it's used by wallet-web for base58 encoding (not Solana-specific)
bs58 = "0.5.1"
