[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core libraries
lib-core = { path = "../crates/libs/lib-core" }
lib-auth = { path = "../crates/libs/lib-auth" }
lib-web = { path = "../crates/libs/lib-web", features = ["genai"] }
lib-solana = { path = "../crates/libs/lib-solana" }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Environment
dotenvy = "0.15.7"

# Error handling
anyhow = "1.0.100"

# Database (for clear_users utility)
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

[[bin]]
name = "backend"
path = "src/main.rs"

