[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared types
shared = { path = "../shared" }

# GTK4 UI
gtk = { version = "0.9", package = "gtk4", features = ["v4_10"] }
cairo-rs = "0.20"
gdk4 = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random (for demo data)
rand = "0.8"

# Async runtime
glib = "0.20"
once_cell = "1.19"
async-channel = "2.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
