[package]
name = "wallet-web"
version = "0.1.0"
edition = "2021"
autobins = false  # Disable auto-discovery of binaries

[[bin]]
name = "wallet-server"
path = "src/main-simple.rs"

[lib]
name = "wallet_web"
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
# Shared types
shared = { path = "../shared" }

# Leptos framework (replacing Yew)
leptos = { version = "0.8.12", features = ["csr"] }   # Latest from crates.io (breaking changes from 0.7)
leptos_router = { version = "0.8.9" }                 # Latest from crates.io

# Wasm bindgen - UPDATED TO LATEST
wasm-bindgen = "0.2.105"                              # Latest from crates.io
wasm-bindgen-futures = "0.4.55"
js-sys = "0.3.82"

# Web APIs
web-sys = { version = "0.3.82", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "Location",
    "console",
    "Event",
    "EventTarget",
    "MouseEvent",
    "Storage",
] }

# HTTP client - UPDATED
gloo-net = { version = "0.6.0", features = ["http"] } # Latest
gloo-utils = "0.2.0"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6.5"                          # Latest

# Logging
log = "0.4.28"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"

# Utils
bs58 = { workspace = true }                              # Use workspace version (for base58 encoding)
gloo-timers = { version = "0.3.0", features = ["futures"] }
urlencoding = "2.1.3"

[dependencies.uuid]
version = "1.18.1"
features = ["v4", "serde", "js"]
