[package]
name = "lib-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { workspace = true }

# Authentication
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# Error handling
thiserror = "2.0.17"

# Time
chrono = { workspace = true }

# Utilities
lib-utils = { path = "../lib-utils" }

